Update on Overleaf.

--- a/modeldoc.tex
+++ b/modeldoc.tex
@@ -104,7 +104,9 @@ Currently, there is no intercept-only model included. The single best model of t
 
 The framework I propose here is based on a data-assimilation approach to forecasting using dynamical state-space models (a.k.a. partially observed Markov process models), where the observed data are considered a partial sample of an underlying true state that evolves through time \citep{Ionides2006, King2016} and the models used to estimate and forecast the true state are iteratively evaluated and updated with each new observation. We use a suite of competing models to make inference about the historic and current state of the system and to produce forecasts of expected future observations. Ongoing data collections provide new observations, which are used to iteratively evaluate the models and produce new predictions via the forecast cycle \citep{Dietze2017}. 
 
-We use $y$ to represent a singular observation and $y_{ijk}$ is the observed number of rodents of species $i$ in plot $j$ at survey $k$. Because $y_{ijk}$ is a count of individuals, the variable is non-negative and integer-valued. The observed numbers of individuals across each species $i$ in $1 \ldots I$ and each plot $j$ in $1 \ldots J$ for a given survey $k$ is an $I \times J$ matrix $\textbf{Y}_k$. The series of observations for surveys $1 \ldots K$ is given by $\textbf{Y}_{1:K}$. A future observation (\emph{i.e.}, what is to be forecast) is denoted $\tilde{y}$, such that the number of species $i$ in plot $j$ that will exist at the next observation is $\tilde{y}_{ij(k+1)}$, the number of all species in all plots $n$ observations into the future is $\tilde{\textbf{Y}}_{k+n}$, and the series of $N$ future observations is $\tilde{\textbf{Y}}_{(k+1):(k+N)}$.
+We use $y$ to represent a singular observation and $y_{ijk}$ is the observed number of rodents of species $i$ in plot $j$ at survey $k$. Because $y_{ijk}$ is a count of individuals, the variable is non-negative and integer-valued. The observed numbers of individuals across each species $i$ in $1 \ldots I$ and each plot $j$ in $1 \ldots J$ for a given survey $k$ is an $I \times J$ matrix $\textbf{Y}_k$. The series of observations for surveys $1 \ldots K$ is given by $\textbf{Y}_{1:K}$ (an $I \times J \times K$ array). 
+
+Our specific observations are noted with a superscripted asterisk ($y^{*}$): the number of individuals of species $i$ actually observed in plot $j$ during survey $k$ is $y^{*}_{ijk}$, the head-counts of all species in all plots observed during survey $k$ is $\textbf{Y}^{*}_{k}$, and the series of actual observations is $\textbf{Y}^{*}_{1:K}$. A future observation (\emph{i.e.}, what is to be forecast) is denoted $\tilde{y}$, such that the number of species $i$ in plot $j$ that will exist at the next observation is $\tilde{y}_{ij(k+1)}$, the number of all species in all plots $n$ observations into the future is $\tilde{\textbf{Y}}_{k+n}$, and the series of $N$ future observations is $\tilde{\textbf{Y}}_{(k+1):(k+N)}$. Combining these notations, our future specific data are represented by both a tilde and an asterisk. An individual datum would be $\tilde{y}^{*}_{ij(k+n)}$ and the set of specific future data is $\tilde{\textbf{Y}}^{*}_{(k+1):(k+N)}$.
 
 The suite of $M$ competing models is compiled to forecast $\tilde{\textbf{Y}}_{(k+1):(k+N)}$ based on $\textbf{Y}_{1:K}$. Each model ($\mathcal{M}_m$) is defined by three functions that describe the evolution of the underlying state and the data collected on it. $f_{y_k|z_k}$ is a general observation function that translates the true underlying state ($\textbf{Z}_k$, number or density of each species in each plot, following the same structure and subscript notation as $\textbf{Y}_k$) into the number of each species actually observed in each plot ($\textbf{Y}_k$):
 
@@ -124,16 +126,16 @@ where $\Delta t_{(k-1):k}$ is the time step ($t_k - t_{k-1}$), $\textbf{X}_{(z|z
 \textbf{Z}_{k=0} = f_{z_0}(\textbf{X}_{z_0}, \Theta_{z_0})
 \end{equation}
 
-The total likelihood ($\mathcal{L}(\mathcal{M}_m|\textbf{Y}_{1:K})$) of a given model $m$ is the data-based measure of support for that model $\mathcal{M}_m$ and is the product of the conditional likelihoods of the model and all previous observations, given each observation:
+The total likelihood ($\mathcal{L}(\mathcal{M}_m|\textbf{Y}^{*}_{1:K})$) of a particular model ($\mathcal{M}_m$) given the specific set of data actually observed ($\textbf{Y}^{*}_{1:K}$) is the data-based, long-running measure of support for that model and is the product of the conditional likelihoods of the model and all previous observations, given each observation:
 
 \begin{equation}
-\mathcal{L}(\mathcal{M}_m|\textbf{Y}_{1:K}) = \prod_{k = 1}^{K}{\mathcal{L}(\mathcal{M}_m, \textbf{Y}_{1:k-1}|\textbf{Y}_{k})},
+\mathcal{L}(\mathcal{M}_m|\textbf{Y}^{*}_{1:K}) = \prod_{k = 1}^{K}{\mathcal{L}(\mathcal{M}_m, \textbf{Y}^{*}_{1:k-1}|\textbf{Y}^{*}_{k})},
 \end{equation}
 
 which is equal to the product of the probabilities of each observation, given the model and the history of observations to that point:
 
 \begin{equation}
-\mathcal{L}(\mathcal{M}_m|\textbf{Y}_{1:K}) = \prod_{k = 1}^{K}{\mathbb{P}[\textbf{Y}_{k}|\mathcal{M}_m, \textbf{Y}_{1:k-1}]}
+\mathcal{L}(\mathcal{M}_m|\textbf{Y}^{*}_{1:K}) = \prod_{k = 1}^{K}{\mathbb{P}[\textbf{Y}^{*}_{k}|\mathcal{M}_m, \textbf{Y}^{*}_{1:k-1}]}
 \end{equation}
 
 
